// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render with SingleExpenses 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $1.50
     
  </h1>
</div>
`;

exports[`should render with mulitExpenses 1`] = `
<div>
  <h1>
    Viewing 
    5
     
    expenses
     totalling 
    $3.00
     
  </h1>
</div>
`;
